deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrefour-microsservices
spec:
  replicas: 3
  selector:
    matchLabels:
      app: carrefour
  template:
    metadata:
      labels:
        app: carrefour
    spec:
      containers:
        - name: launch-service
          image: launch-service:latest
          ports:
            - containerPort: 5000
        - name: balance-service
          image: balance-service:latest
          ports:
            - containerPort: 5002
        - name: report-service
          image: report-service:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: carrefour-service
spec:
  selector:
    app: carrefour
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
