service.yml
apiVersion: v1
kind: Service
metadata:
  name: launch-service
spec:
  selector:
    app: carrefour
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: balance-service
spec:
  selector:
    app: carrefour
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  selector:
    app: carrefour
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
