ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carrefour-ingress
spec:
  rules:
    - host: carrefour.local
      http:
        paths:
          - path: /launch
            pathType: Prefix
            backend:
              service:
                name: launch-service
                port:
                  number: 5000
          - path: /balance
            pathType: Prefix
            backend:
              service:
                name: balance-service
                port:
                  number: 5002
          - path: /report
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 5001
